# Food-Stats

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  stack.env.sample
legacy/: pyproject.toml.old  uv.lock.old
n8n/: food-stats-telegram-workflow.json
src/: api.py  classification.py  database.py  main.py  pipeline.py  segmentation.py
src/dev/classification/: dataset.py  inference.py  prepare_dataset.py  training.py
src/dev/segmentation/: dataset.py  inference.py  prepare_dataset.py  training.py
